--- a/css/carta_style.css
+++ b/css/carta_style.css
@@ -1,36 +1,36 @@
 body {
-  overflow: hidden;
-  padding: 0;
-  margin: 0;
-}
-
-.flag {
-  display: flex;
-  flex-direction: row;
-  width: 100vw;
-  height: 100vh;
-}
-
-.izquierda,
-.centro,
-.derecha {
-  flex: 1;
-}
-
-.izquierda img,
-.derecha img {
-  width: 100%;
-  height: 100vh;
-  object-fit: cover;
-}
-
-.centro {
-  padding: 2rem;
-  font-size: 30px;
   background-color: #adc587;
-  font-family: "Montez";
-  display: flex;
-  align-items: center;
-  text-align: center; 
 }
 
+.container {
+  display: flex;
+  flex-direction: row-reverse; 
+  justify-content: space-between; 
+  padding: 0 2rem;
+}
+
+.card {
+  width: 200px;
+  height: auto;
+  margin-top: 2rem;
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+  border-radius: 20px;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  -ms-border-radius: 20px;
+  -o-border-radius: 20px;
+}
+
+h1 {
+  padding-top: 30px;
+  font-family: "Montez";
+}
+
+.card:first-child {
+  margin-left: 0; 
+}
+
+.card:last-child {
+  margin-right: 0;
+}
