--- a/css/carta_style.css
+++ b/css/carta_style.css
@@ -7,8 +7,8 @@ body {
 
 .container {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between; 
+  box-sizing: border-box;
+  justify-content: space-around;
   padding: 0 2rem;
 }
 
