--- a/css/index_style.css
+++ b/css/index_style.css
@@ -1,10 +1,17 @@
+:root {
+  --fontfamily: 'Montez';
+  --secondColor: #e39d44;
+  --primaryColor: #adc587;
+}
+
+/* * ---------------------------------------------- INDEX */
+
 body {
   margin: 0;
   padding: 0;
-  background-color: #adc587;
-  overflow: hidden;
+  background-color: var(--primaryColor);
 }
-.container {
+.containerindex {
   width: 100%;
 }
 
@@ -59,7 +66,7 @@ body {
 .styled-button {
     padding: 10px;
     color: white;
-    font-family: "Montez";
+    font-family: var(--fontfamily);
     border-radius: 37px;
     background-color: rgba(227, 157, 68, 0.68); /* Fondo semi-transparente */
     border: 0;
@@ -74,5 +81,282 @@ body {
 
 .styled-button:hover{
     background-color: white;
-    color: #e39d44;
+    color: var(--secondColor);
+}
+/* * ---------------------------------------------- ABOUT US */
+
+.flagaboutus{
+display: flex;
+}
+
+.izquierdaaboutus,
+.centroaboutus,
+.derechaaboutus{
+  flex: 1;
+}
+
+.izquierdaaboutus,
+.derechaaboutus {
+  width: calc(100vw/3);
+  height: 100vh;
+  background-size: cover;
+  object-fit: cover; 
+}
+
+.izquierdaaboutus {
+  background-image: url("../img/Tallarines_Rojos.png");
+}
+
+.derechaaboutus {
+  background-image: url("../img/plato3.jpg");
+}
+
+.centroaboutus p {
+  font-family: var(--fontfamily);
+  margin-top: 170px;
+  padding: 40px;
+  font-size: 30px;
+  text-align: center;
+}
+
+.color_centro{
+  background-color: var(--primaryColor);
+}
+
+
+/* * ---------------------------------------------- CARTA */
+#carta {
+  background-color: var(--primaryColor);
+  width: 100vw;
+  height: 100vh;
+}
+
+.containercarta {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between; 
+  padding: 0 2rem;
+}
+
+.card {
+  width: 200px;
+  height: auto;
+  margin-top: 2rem;
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+  border-radius: 20px;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  -ms-border-radius: 20px;
+  -o-border-radius: 20px;
+}
+
+h1 {
+  font-size: 50px;
+  padding-top: 0px;
+  font-family: var(--fontfamily);
+}
+
+.card:first-child {
+  margin-left: 0; 
+}
+
+.card:last-child {
+  margin-right: 0;
+}
+
+.contenedor_platos {
+  display: flex;
+  flex-direction: row;
+  padding: 0 2rem;
+  margin-top: 1rem;
+}
+
+.platos_left, .platos_right {
+  flex: 1;
+}
+
+.align_platos{
+  display: flex;
+  text-align: center;
+  justify-content: center;
+}
+
+.izquierda h2, p,
+.derecha h2, p{
+font-family: var(--fontfamily);
+text-align: center;
+font-size: 20px;
+}
+
+
+
+/* * ---------------------------------------------- RESERVA */
+
+body {
+  margin: 0;
+  padding: 0;
+}
+
+.izquierdareserva,
+.derechareserva {
+  width: 50vw;
+  height: 60vh;
+  background-size: cover;
+  background-position: center;
+  margin: 0;
+  padding: 0;
+}
+
+.izquierdareserva {
+  background-image: url("../img/plato_fideos_verduras.jpeg");
+}
+
+.derechareserva {
+  background-image: url("../img/plato_camarones.jpg");
+}
+
+.flag {
+  display: flex;
+}
+
+.titulo {
+  font-family: var(--fontfamily);
+  font-size: 50px;
+  text-align: center;
+}
+
+.parrafo {
+  font-size: 30px;
+}
+
+.btn {
+  background-color: var(--primaryColor);
+  border-radius: 27px;
+  padding: 15px 30px;
+  margin-left: auto; /* Mueve el botón a la derecha */
+}
+
+.abajoreserva {
+  background-color: var(--secondColor);
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  padding-top: 20px;
+}
+
+.text_container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 80%;
+  margin: 20px auto;
+}
+
+.parrafo {
+  margin-right: auto; /* Mueve el párrafo a la izquierda */
+}
+
+.font_text{
+    font-family: var(--fontfamily);
+}
+
+
+/* * ---------------------------------------------- DELIVERY */
+
+#delivery{
+  background-color: black;
+}
+
+.containerdelivery {
+  display: flex;
+  flex-direction: row;
+  min-height: 60vh;
+}
+
+.izquierdadelivery,
+.derechadelivery {
+  flex: 1;
+}
+
+.izquierdadelivery img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.derechadelivery {
+  width: 40vw;
+  background-color: var(--primaryColor);
+  display: flex; 
+  flex-direction: column; 
+  justify-content: center; 
+}
+
+.derechadelivery h1,
+.derechadelivery p {
+  text-align: center;
+  color: black;
+  margin-bottom: 0px;
+}
+
+.derechadelivery h1 {
+  padding-top: 20px;
+}
+
+.abajodelivery {
+  width: 100vw;
+  height: 40vh;
+  background-color: black;
+  display: flex; 
+  flex-direction: column;
+  justify-content: center; 
+}
+
+.abajodelivery h1,
+.abajodelivery h2 {
+    margin-bottom: 0px;
+    font-family: var(--fontfamily);
+}
+
+.abajodelivery h1{
+  font-size: 38px;
+}
+
+.abajodelivery h2{
+  margin-top: 10px;
+}
+
+
+.abajodelivery p {
+  text-align: left;
+  padding-left: 100px;
+}
+
+.color_text {
+  color: white;
+  text-align: center;
+}
+
+.size_img {
+    width: 41px;
+    height: 35px;
+    margin: 10px;
+}
+
+.formas-redes {
+  display: flex;
+  justify-content: space-between; /* Distribuye los elementos horizontalmente */
+  align-items: center; /* Centra verticalmente los elementos */
+}
+
+.formas-pago {
+  padding-left: 85px; /* Agrega padding a la izquierda de las formas de pago */
+  margin-bottom: 50px;
+}
+
+.redes {
+  padding-right: 60px; /* Agrega padding a la derecha de las redes sociales */
+  margin-bottom: 50px;
 }
