--- a/css/index_style.css
+++ b/css/index_style.css
@@ -168,6 +168,7 @@ display: flex;
 }
 
 h1 {
+  padding-top: 40px;
   font-size: 50px;
   font-family: var(--fontfamily);
   margin: 0;
@@ -209,6 +210,11 @@ font-size: 20px;
 
 /* * ---------------------------------------------- RESERVA */
 
+#sectionReserva{
+  width: 100vw;
+  height: 100vh;
+}
+
 .izquierdareserva,
 .derechareserva {
   width: 50vw;
@@ -246,6 +252,7 @@ font-size: 20px;
   border-radius: 27px;
   padding: 15px 30px;
   margin-left: auto; /* Mueve el botón a la derecha */
+  border: 0;
 }
 
 .abajoreserva {
@@ -255,6 +262,7 @@ font-size: 20px;
   flex-direction: column;
   justify-content: center;
   padding-top: 20px;
+  height: 40vh;
 }
 
 .text_container {
@@ -266,7 +274,7 @@ font-size: 20px;
 }
 
 .parrafo {
-  margin-right: auto; /* Mueve el párrafo a la izquierda */
+  margin-right: auto;
 }
 
 .font_text{
@@ -276,7 +284,7 @@ font-size: 20px;
 
 /* * ---------------------------------------------- DELIVERY */
 
-#delivery{
+#sectionDelivery{
   background-color: black;
 }
 
