--- a/css/index_style.css
+++ b/css/index_style.css
@@ -17,6 +17,8 @@ body {
   margin: 0;
   padding: 0;
   border: 0;
+  width: 100vw;
+  height: 100vh;
 }
 
 .containerindex {
@@ -116,7 +118,7 @@ body {
   background-position: center;
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 790px) {
   #sectionaboutus {
     flex-direction: column;
   }
